--- a/src/local_flight_map/ui/app/static/css/map.css
+++ b/src/local_flight_map/ui/app/static/css/map.css
@@ -1,6 +1,14 @@
 /* Radar beam styles */
 .radar-beam-line {
   filter: drop-shadow(0 0 5px rgba(0, 255, 0, 0.8));
+  background: linear-gradient(90deg,
+      rgba(0, 255, 0, 1) 0%,
+      rgba(0, 255, 0, 0.8) 50%,
+      rgba(0, 255, 0, 0) 100%);
+  width: 100%;
+  height: 3px;
+  transform-origin: left center;
+  transition: height 0.1s ease-out;
 }
 
 /* Distance line styles */
